--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -31,8 +31,9 @@
   --sidebar-bg: radial-gradient(circle, #242424 0%, #1d1f27 100%);
   --sidebar-muted-color: #6d6c6b;
   --sidebar-active-color: rgb(255 255 255 / 80%);
-  --nav-cursor-color: rgb(183, 182, 182);
+  --nav-cursor-color: rgb(175, 210, 255);
   --sidebar-btn-bg: rgb(117 116 116 / 20%);
+  --sidebar-border: #414141;
 
   /* Topbar */
   --topbar-text-color: var(--text-color);
