--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -26,11 +26,12 @@
   --checkbox-checked-color: #07a8f7;
 
   /* Sidebar */
-  --sidebar-bg: #eeeeee;
+  --sidebar-bg: #ffffff;
   --sidebar-muted-color: #a2a19f;
   --sidebar-active-color: #424242;
-  --nav-cursor-color: #757575;
+  --nav-cursor-color: #0066ff;
   --sidebar-btn-bg: white;
+  --sidebar-border: #7e7e7e;
 
   /* Topbar */
   --topbar-text-color: rgb(78, 78, 78);
