--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -1043,7 +1043,7 @@ $sidebar-display: "sidebar-display";
 
   .categories,
   #tags,
-  #archives {
+  #posts {
     a:not(:hover) {
       @extend %no-bottom-border;
     }
