--- a/_sass/jekyll-theme-chirpy.scss
+++ b/_sass/jekyll-theme-chirpy.scss
@@ -19,6 +19,6 @@
   "layout/home",
   "layout/post",
   "layout/tags",
-  "layout/archives",
+  "layout/posts",
   "layout/categories",
   "layout/category-tag";
