--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,11 +1,11 @@
 ---
 layout: page
-# The Archives of posts.
+# The posts of posts.
 ---
 
 {% include lang.html %}
 
-<div id="archives" class="pl-xl-2">
+<div id="posts" class="pl-xl-2">
 
 {% for post in site.posts %}
   {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
