--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -82,7 +82,7 @@
   --categories-hover-bg: rgb(73, 75, 76);
   --categories-icon-hover-color: white;
 
-  /* archives */
+  /* posts */
   --timeline-node-bg: rgb(150, 152, 156);
   --timeline-color: rgb(63, 65, 68);
   --timeline-year-dot-color: var(--timeline-color);
@@ -128,7 +128,7 @@
     }
   }
 
-  #archives li:nth-child(odd) {
+  #posts li:nth-child(odd) {
     background-image:
       linear-gradient(
         to left,
