--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -78,7 +78,7 @@ title: tutorials
         <li class="list-group-item">
           <i class="far fa-folder fa-fw"></i>
 
-          {% capture _sub_ctg_url %}/categories/{{ sub_category | slugify | url_encode }}/{% endcapture %}
+          {% capture _sub_ctg_url %}/tutorials/{{ sub_category | slugify | url_encode }}/{% endcapture %}
           <a href="{{ _sub_ctg_url | relative_url }}" class="ml-1 mr-2">{{ sub_category }}</a>
 
           {% assign posts_size = site.categories[sub_category] | size %}
