Add basic posts

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -192,6 +192,11 @@ img[data-src] {
   &.shadow {
     filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.08));
   }
+
+}
+
+img[data-src] + em {
+  border: 5px solid #555;
 }
 
 /* --- Panels --- */
