--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -31,7 +31,7 @@
   --sidebar-active-color: #424242;
   --nav-cursor-color: #0066ff;
   --sidebar-btn-bg: white;
-  --sidebar-border: #7e7e7e;
+  --sidebar-border: #b3b3b3;
 
   /* Topbar */
   --topbar-text-color: rgb(78, 78, 78);
