--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -50,7 +50,7 @@
   --btn-paginator-border-color: var(--btn-border-color);
   --btn-text-color: var(--text-color);
   --pin-bg: rgb(34 35 37);
-  --pin-color: inherit;
+  --pin-color: #ff6b6b;
 
   /* Posts */
   --toc-highlight: rgb(116, 178, 243);
