--- a/_sass/colors/light-typography.scss
+++ b/_sass/colors/light-typography.scss
@@ -49,7 +49,7 @@
   --btn-paginator-border-color: var(--sidebar-bg);
   --btn-text-color: #676666;
   --pin-bg: #f5f5f5;
-  --pin-color: #999fa4;
+  --pin-color: #ff1d1d;
 
   /* Posts */
   --btn-share-hover-color: var(--link-color);
