Put category pages in the same page

--- a/_sass/layout/categories.scss
+++ b/_sass/layout/categories.scss
@@ -6,6 +6,15 @@
   color: gray;
 }
 
+.category-post-card {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 0.6rem;
+  padding-bottom: 0.6rem;
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-top-color: #bbbbbb;
+}
 .categories {
   margin-bottom: 2rem;
 
