--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -14,87 +14,64 @@ title: tutorials
 {% assign sort_categories = site.categories | sort %}
 
 {% for category in sort_categories %}
-  {% assign category_name = category | first %}
-  {% assign posts_of_category = category | last %}
-  {% assign first_post = posts_of_category | first %}
+{% assign category_name = category | first %}
+{% assign posts_of_category = category | last %}
+{% assign first_post = posts_of_category | first %}
 
-  {% if category_name == first_post.categories[0] %}
-    {% assign sub_categories = "" | split: "" %}
+{% if category_name == first_post.categories[0] %}
+{% assign sub_categories = "" | split: "" %}
 
-    {% for post in posts_of_category %}
-      {% assign second_category = post.categories[1] %}
-      {% if second_category %}
-        {% unless sub_categories contains second_category %}
-          {% assign sub_categories = sub_categories | push: second_category %}
-        {% endunless %}
-      {% endif %}
-    {% endfor %}
+{% assign posts_of_category_size = posts_of_category | size %}
 
-    {% assign sub_categories = sub_categories | sort %}
-    {% assign sub_categories_size = sub_categories | size %}
+<div class="card categories">
+  <!-- top-category -->
+  <div id="{{ HEAD_PREFIX }}{{ group_index }}" class="card-header d-flex justify-content-between hide-border-bottom">
+    <span>
+      <i class="far fa-folder{% if sub_categories_size > 0 %}-open{% endif %} fa-fw"></i>
 
-  <div class="card categories">
-    <!-- top-category -->
-    <div id="{{ HEAD_PREFIX }}{{ group_index }}"
-      class="card-header d-flex justify-content-between hide-border-bottom">
-      <span>
-        <i class="far fa-folder{% if sub_categories_size > 0 %}-open{% endif %} fa-fw"></i>
+      {% capture _category_url %}/tutorials/{{ category_name | slugify | url_encode }}/{% endcapture %}
+      <a href="{{ _category_url | relative_url }}" class="ml-1 mr-2">{{ category_name }}</a>
 
-        {% capture _category_url %}/tutorials/{{ category_name | slugify | url_encode }}/{% endcapture %}
-        <a href="{{ _category_url | relative_url }}" class="ml-1 mr-2">{{ category_name }}</a>
-
-        <!-- content count -->
-        {% assign top_posts_size = site.categories[category_name] | size %}
-        <span class="text-muted small font-weight-light">
-          {% if sub_categories_size > 0 %}
-            {{ sub_categories_size }}
-            {{ site.data.locales[lang].categories.category_measure }},
-          {% endif %}
-            {{ top_posts_size }}
-            {{ site.data.locales[lang].categories.post_measure }}
-        </span>
+      <!-- content count -->
+      {% assign top_posts_size = site.categories[category_name] | size %}
+      <span class="text-muted small font-weight-light">
+        {% if sub_categories_size > 0 %}
+        {{ sub_categories_size }}
+        {{ site.data.locales[lang].categories.category_measure }},
+        {% endif %}
+        {{ top_posts_size }}
+        {{ site.data.locales[lang].categories.post_measure }}
       </span>
+    </span>
 
-      <!-- arrow -->
-      {% if sub_categories_size > 0%}
-      <a href="#{{ LIST_PREFIX }}{{ group_index }}" data-toggle="collapse"
-        aria-expanded="true" aria-label="{{ HEAD_PREFIX }}{{ group_index }}-trigger"
-        class="category-trigger hide-border-bottom">
-        <i class="fas fa-fw fa-angle-down"></i>
-      </a>
-      {% else %}
-      <span data-toggle="collapse" class="category-trigger hide-border-bottom disabled">
-        <i class="fas fa-fw fa-angle-right"></i>
-      </span>
-      {% endif %}
-
-    </div> <!-- .card-header -->
-
-    <!-- Sub-categories -->
-    {% if sub_categories_size > 0 %}
-    <div id="{{ LIST_PREFIX }}{{ group_index }}" class="collapse show" aria-expanded="true">
-      <ul class="list-group">
-        {% for sub_category in sub_categories %}
-        <li class="list-group-item">
-          <i class="far fa-folder fa-fw"></i>
-
-          {% capture _sub_ctg_url %}/tutorials/{{ sub_category | slugify | url_encode }}/{% endcapture %}
-          <a href="{{ _sub_ctg_url | relative_url }}" class="ml-1 mr-2">{{ sub_category }}</a>
-
-          {% assign posts_size = site.categories[sub_category] | size %}
-          <span class="text-muted small font-weight-light">
-            {{ posts_size }}
-            {{ site.data.locales[lang].categories.post_measure }}
-          </span>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
+    <!-- arrow -->
+    {% if posts_of_category_size > 0%}
+    <a href="#{{ LIST_PREFIX }}{{ group_index }}" data-toggle="collapse" aria-expanded="true"
+      aria-label="{{ HEAD_PREFIX }}{{ group_index }}-trigger" class="category-trigger hide-border-bottom">
+      <i class="fas fa-fw fa-angle-down"></i>
+    </a>
+    {% else %}
+    <span data-toggle="collapse" class="category-trigger hide-border-bottom disabled">
+      <i class="fas fa-fw fa-angle-right"></i>
+    </span>
     {% endif %}
 
-  </div> <!-- .card -->
+  </div> <!-- .card-header -->
 
-    {% assign group_index = group_index | plus: 1 %}
+  <div class="collapse show">
+    <ul class="list-group">
+    {% for post in posts_of_category %}
+    <li class="category-post-card d-flex justify-content-between pl-md-3 pr-md-3">
+      <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
+      <span class="dash flex-grow-1"></span>
+      <span class="text-muted small">{{ post.date | date: post_df }}</span>
+    </li>
+    {% endfor %}
+  </ul>
+  </div>
+</div> <!-- .card -->
 
-  {% endif %}
+{% assign group_index = group_index | plus: 1 %}
+
+{% endif %}
 {% endfor %}
