Add comments support

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ tail_includes:
   - related-posts
 ---
 
+
 {% include lang.html %}
 
 {% if page.image.src %}
@@ -142,3 +143,11 @@ tail_includes:
   </div><!-- .post-tail-bottom -->
 
 </div><!-- div.post-tail-wrapper -->
+
+<!-- <script src="https://utteranc.es/client.js"
+        repo="aheze/Swift-Blog"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+</script> -->
